--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
-  "name": "atom-light-ratio",
-  "version": "0.1.0",
-  "private": true,
+  "name": "example-with-tailwindcss",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "start": "vinxi start"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.6"
+    "@solidjs/router": "^0.14.1",
+    "@solidjs/start": "^1.0.6",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "solid-js": "^1.8.18",
+    "tailwindcss": "^3.4.3",
+    "vinxi": "^0.4.1"
   },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+  "engines": {
+    "node": ">=18"
   }
 }
